--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flowmates</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-      crossorigin="anonymous"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Noto+Serif+Hebrew:wght@100&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <!--Скрипти-->
-    <script src="./index.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Flowmates</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+    crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&family=Noto+Serif+Hebrew:wght@100&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+  <header class="header container">
+    <div class="header__logo">
+      <a href="#">
+        <img src="../images/logo.png" alt="Flowmates">
+      </a>
+    </div>
+    <nav>
+      <ul class="header__menu">
+        <li><a href="#">About FlowMates</a></li>
+        <li><a href="#">About conference</a></li>
+        <li><a href="#">Become a contributor</a></li>
+        <li><a href="#">Become a citizen developer</a></li>
+      </ul>
+    </nav>
+    <button class="button button-secondary">Register</button>
+    <div class="header__burger-icon">&#9776;</div>
+    <ul class="header__burger-menu">
+      <li><a href="#">About FlowMates</a></li>
+      <li><a href="#">About conference</a></li>
+      <li><a href="#">Become a contributor</a></li>
+      <li><a href="#">Become a citizen developer</a></li>
+    </ul>
+  </header>
+
+  <main>
+    <section class="banner container container-dark">
+      <div class="banner__text">
+        <h1 class="banner__text-title">In <span class="colorful-text">No-Code</span> <br>We trust</h1>
+        <p class="banner__text-subtitle">
+          <span class="bold">No Code, No Conference.</span> Fintech Edition by FlowMates
+        </p>
+        <div class="banner__text-description">
+          <p>Join the biggest <span class="colorful-text">No-Code event</span>
+            in Ukraine!</p>
+          <p><span class="colorful-text">???</span> out of <span class="colorful-text">???</span> places left</p>
+        </div>
+        <button class="button">
+          Register
+        </button>
+      </div>
+      <div class="banner__image-info">
+        <div class="banner__image">
+          <img src="../images/groupdev.png" alt="Our teammates">
+        </div>
+
+        <div class="banner__info">
+          <div class="banner__info-date">
+            <span class="material-symbols-outlined">
+              calendar_today
+            </span>
+            <span>26.05</span>
+          </div>
+          <div class="banner__info-address">
+            <span class="material-symbols-outlined">
+              location_on
+            </span>
+            <span>Kooperativ, 23A Sichovyh Striltsiv Street, Kyiv</span>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <script src="./index.js"></script>
+</body>
+
 </html>
