--- a/src/index.html
+++ b/src/index.html
@@ -1,88 +1,232 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Flowmates</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&family=Noto+Serif+Hebrew:wght@100&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Flowmates</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-    crossorigin="anonymous" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&family=Noto+Serif+Hebrew:wght@100&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="stylesheet" href="./style.css" />
-</head>
-
-<body>
-  <header class="header container">
-    <div class="header__logo">
-      <a href="#">
-        <img src="../images/logo.png" alt="Flowmates">
-      </a>
-    </div>
-    <nav>
-      <ul class="header__menu">
-        <li><a href="#">About FlowMates</a></li>
-        <li><a href="#">About conference</a></li>
-        <li><a href="#">Become a contributor</a></li>
-        <li><a href="#">Become a citizen developer</a></li>
-      </ul>
-    </nav>
-    <button class="button button-secondary">Register</button>
-    <div class="header__burger-icon">&#9776;</div>
-    <ul class="header__burger-menu">
-      <li><a href="#">About FlowMates</a></li>
-      <li><a href="#">About conference</a></li>
-      <li><a href="#">Become a contributor</a></li>
-      <li><a href="#">Become a citizen developer</a></li>
-    </ul>
-  </header>
-
-  <main>
-    <section class="banner container container-dark">
-      <div class="banner__text">
-        <h1 class="banner__text-title">In <span class="colorful-text">No-Code</span> <br>We trust</h1>
-        <p class="banner__text-subtitle">
-          <span class="bold">No Code, No Conference.</span> Fintech Edition by FlowMates
-        </p>
-        <div class="banner__text-description">
-          <p>Join the biggest <span class="colorful-text">No-Code event</span>
-            in Ukraine!</p>
-          <p><span class="colorful-text">???</span> out of <span class="colorful-text">???</span> places left</p>
-        </div>
-        <button class="button">
-          Register
-        </button>
+  <body>
+    <header class="header container">
+      <div class="header__logo">
+        <a href="#">
+          <img src="../images/logo.png" alt="Flowmates" />
+        </a>
       </div>
-      <div class="banner__image-info">
-        <div class="banner__image">
-          <img src="../images/groupdev.png" alt="Our teammates">
-        </div>
-
-        <div class="banner__info">
-          <div class="banner__info-date">
-            <span class="material-symbols-outlined">
-              calendar_today
-            </span>
-            <span>26.05</span>
-          </div>
-          <div class="banner__info-address">
-            <span class="material-symbols-outlined">
-              location_on
-            </span>
-            <span>Kooperativ, 23A Sichovyh Striltsiv Street, Kyiv</span>
-          </div>
-        </div>
+      <nav>
+        <ul class="header__menu list">
+          <li><a href="#">About FlowMates</a></li>
+          <li><a href="#">About conference</a></li>
+          <li><a href="#">Become a contributor</a></li>
+          <li><a href="#">Become a citizen developer</a></li>
+        </ul>
+      </nav>
+      <button class="button button-secondary">Register</button>
+      <button
+        type="button"
+        data-menu-open
+        class="header__burger-icon menu-icon"
+        aria-expanded="false"
+      >
+        &#9776;
+      </button>
+      <!-- <div class="header__burger-icon menu-icon">&#9776;</div> -->
+      <div data-menu class="header__burger-menu">
+        <button class="is-close" type="button" data-menu-close>&#215;</button>
+        <ul>
+          <li><a href="#">About FlowMates</a></li>
+          <li><a href="#">About conference</a></li>
+          <li><a href="#">Become a contributor</a></li>
+          <li><a href="#">Become a citizen developer</a></li>
+        </ul>
       </div>
-    </section>
-  </main>
-  <script src="./index.js"></script>
-</body>
+    </header>
 
+    <main>
+      <section class="banner container container-dark">
+        <div class="banner__text">
+          <h1 class="banner__text-title">
+            In <span class="colorful-text">No-Code</span> <br />We trust
+          </h1>
+          <p class="banner__text-subtitle">
+            <span class="bold">No Code, No Conference.</span> Fintech Edition by
+            FlowMates
+          </p>
+          <div class="banner__text-description">
+            <p>
+              Join the biggest
+              <span class="colorful-text">No-Code event</span> in Ukraine!
+            </p>
+            <p>
+              <span class="colorful-text">???</span> out of
+              <span class="colorful-text">???</span> places left
+            </p>
+          </div>
+          <button class="button">Register</button>
+        </div>
+        <div class="banner__image-info">
+          <div class="banner__image">
+            <img src="../images/groupdev.png" alt="Our teammates" />
+          </div>
+
+          <div class="banner__info">
+            <div class="banner__info-date">
+              <span class="material-symbols-outlined"> calendar_today </span>
+              <span>26.05</span>
+            </div>
+            <div class="banner__info-address">
+              <span class="material-symbols-outlined"> location_on </span>
+              <span>Kooperativ, 23A Sichovyh Striltsiv Street, Kyiv</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section whoIs container">
+        <div class="whoIs__wrapper wrapper">
+          <div class="whoIs__ImgWrapper">
+            <img src="../images/desktop/conectDesktop.jpg" alt="conect" />
+          </div>
+          <div class="wrapper__text">
+            <h2>What is <span class="span_title">FlowMates?</span></h2>
+            <p>
+              <span>Flowmates</span> -is a global community of friendly and
+              collaborative people with one common goal - developing open-source
+              technologies.
+              <br />
+              Our <span> core </span>mission is to create the best conditions
+              for business digitalization with the help of open source low-code
+              platform and training of citizen developers.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="section conference">
+        <div class="container">
+          <h2><span class="span_title">What is</span> the conference about?</h2>
+          <div class="conference__wrapper wrapper">
+            <div class="wrapper__text">
+              <p>
+                <span>Flowmates</span> invite all tech specialists, geeks
+                no/low-code evangelists, IT communities, investors, or
+                investment funds to take part in the forthcoming event.
+                Dedicated to the battle of approaches to the implementation of
+                projects using No-Code, the event will be useful for both
+                investors and IT innovators interested in taking the maximum
+                advantages out of the IT revolution.
+                <br />
+                Ukraine bank representatives and
+                <span>No-Code </span> communities will be presented at the
+                conference where the professional speakers will discuss No-Code
+                solutions for business, successful cases, and fuckups.
+              </p>
+              <h3>Вартість конференції: $$$</h3>
+              <button class="button">Register</button>
+            </div>
+
+            <div class="conference__Iframewrapper">
+              <iframe
+                width="520"
+                height="315"
+                src="https://www.youtube.com/embed/VIDEO_ID"
+                frameborder="0"
+                allow="autoplay; encrypted-media"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="container container-dark for">
+        <h2><span class="span_title">Who is </span> this conference for?</h2>
+        <div>
+          <ul class="for__list list">
+            <li class="for__item">
+              <div>
+                <img src="../images/GearSix.svg" />
+                <h3>For IT people</h3>
+              </div>
+
+              <p>
+                IT people will get new No-code skills, and will be able to
+                become more valuable professionals on the market
+              </p>
+            </li>
+            <li class="for__item">
+              <div>
+                <img src="../images/GearSix.svg" />
+                <h3>For investors</h3>
+              </div>
+
+              <p>
+                Investors will learn insights about the No-code investment
+                opportunities in Ukraine and worldwide
+              </p>
+            </li>
+            <li class="for__item">
+              <div>
+                <img src="../images/GearSix.svg" />
+                <h3>For business owners</h3>
+              </div>
+
+              <p>
+                Entrepreneurs will learn how to use No-code development to
+                improve business processes and automate business processes
+              </p>
+            </li>
+            <li class="for__item">
+              <div>
+                <img src="../images/GearSix.svg" />
+                <h3>Fintech people</h3>
+              </div>
+
+              <p>
+                Fintech people will understand new trends in the No-code market
+                and how to use these technologies in your business
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section guest">
+        <div class="whoIs__wrapper wrapper container">
+          <div class="whoIs__ImgWrapper guest-back">
+            <img src="../images/desktop/guestdesk.png" alt="conect" />
+          </div>
+          <div class="wrapper__text">
+            <h2>Invited <span class="span_title">guest</span></h2>
+            <p>
+              Senior bank manager with 30 years of experience in project
+              management, business development and design of new digital product
+              solutions. <br />
+              Managed digital transformation in banks: Montepio Geral,
+              Argentaria and BBVA in Portugal and Spain 7 years of international
+              experience, constantly innovating and focusing primarily on
+              solutions with real impact on companies profits. <br />
+              Vitor focuses on long-term results and solving strategic problems.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <script src="./menu.js"></script>
+    <script src="./index.js"></script>
+  </body>
 </html>
