--- a/src/index.html
+++ b/src/index.html
@@ -210,9 +210,9 @@
           <div class="whoIs__ImgWrapper guest-back">
             <img src="../images/desktop/guestdesk.png" alt="conect" />
           </div>
-          <div class="wrapper__text">
+          <div>
             <h2>Invited <span class="span_title">guest</span></h2>
-            <p>
+            <p class="wrapper__text-guest">
               Senior bank manager with 30 years of experience in project
               management, business development and design of new digital product
               solutions. <br />
