--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
     </header>
 
     <main>
-      <section class="banner container container-dark">
+      <section class="section container container-dark banner">
         <div class="banner__text">
           <h1 class="banner__text-title">
             In <span class="colorful-text">No-Code</span> <br />We trust
@@ -99,7 +99,7 @@
           </div>
         </div>
       </section>
-      <section class="section whoIs container">
+      <section class="section container whoIs">
         <div class="whoIs__wrapper wrapper">
           <div class="whoIs__ImgWrapper">
             <img src="../images/desktop/conectDesktop.jpg" alt="conect" />
@@ -119,7 +119,7 @@
         </div>
       </section>
       <section class="section conference">
-        <div class="container">
+        <div class="container section">
           <h2><span class="span_title">What is</span> the conference about?</h2>
           <div class="conference__wrapper wrapper">
             <div class="wrapper__text">
@@ -137,7 +137,7 @@
                 conference where the professional speakers will discuss No-Code
                 solutions for business, successful cases, and fuckups.
               </p>
-              <h3>Вартість конференції: $$$</h3>
+              <h3>Ticket price: $$$</h3>
               <button class="button">Register</button>
             </div>
 
@@ -154,7 +154,7 @@
           </div>
         </div>
       </section>
-      <section class="container container-dark for">
+      <section class="section container container-dark for">
         <h2><span class="span_title">Who is </span> this conference for?</h2>
         <div>
           <ul class="for__list list">
@@ -171,7 +171,7 @@
             </li>
             <li class="for__item">
               <div>
-                <img src="../images/GearSix.svg" />
+                <img src="../images/CurrencyCircleDollar.svg" />
                 <h3>For investors</h3>
               </div>
 
@@ -182,7 +182,7 @@
             </li>
             <li class="for__item">
               <div>
-                <img src="../images/GearSix.svg" />
+                <img src="../images/Briefcase.svg" />
                 <h3>For business owners</h3>
               </div>
 
@@ -193,7 +193,7 @@
             </li>
             <li class="for__item">
               <div>
-                <img src="../images/GearSix.svg" />
+                <img src="../images/FileCode.svg" />
                 <h3>Fintech people</h3>
               </div>
 
@@ -205,10 +205,11 @@
           </ul>
         </div>
       </section>
-      <section class="section guest">
+      <section class="section container guest">
         <div class="whoIs__wrapper wrapper container">
           <div class="whoIs__ImgWrapper guest-back">
             <img src="../images/desktop/guestdesk.png" alt="conect" />
+            <h2>Vitor Cruz</h2>
           </div>
           <div>
             <h2>Invited <span class="span_title">guest</span></h2>
@@ -225,7 +226,279 @@
           </div>
         </div>
       </section>
+      <section class="section container form">
+        <div class="form__wrapper container-dark container">
+          <form>
+            <h2>
+              <span class="span_title">Register now,</span> number of <br />
+              tickets is limited!
+            </h2>
+            <label for="first-name">First Name:</label>
+            <input type="text" id="first-name" name="first-name" /><br />
+
+            <label for="second-name">Second Name:</label>
+            <input type="text" id="second-name" name="second-name" /><br />
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" /><br />
+
+            <label for="phone">Phone Number:</label>
+            <input type="tel" id="phone" name="phone" /><br />
+
+            <label>Are you a:</label><br />
+            <input
+              type="radio"
+              id="company-rep"
+              name="role"
+              value="company-rep"
+            />
+            <label for="company-rep">Company Representative</label><br />
+
+            <input
+              type="radio"
+              id="it-specialist"
+              name="role"
+              value="it-specialist"
+            />
+            <label for="it-specialist">IT-Specialist</label><br />
+
+            <button type="submit" id="join-online" class="button">
+              Join Online
+            </button>
+            <button type="submit" id="join-offline" class="button">
+              Join Offline
+            </button>
+          </form>
+        </div>
+      </section>
+      <section class="section container contributorCompany">
+        <div class="container">
+          <h2>
+            How to become <br /><span class="span_title">a contributor</span>
+            company?
+          </h2>
+          <p>
+            Contributors are companies that are members of the FlowMates
+            community and enjoy the benefits of being part of the community.
+          </p>
+          <h4>
+             Leave a request below and join the first
+            <span class="span_title">Ukrainian No-Code</span> community!
+          </h4>
+          <h4>
+            Collaborating <span class="span_title">with us</span> , you will:
+          </h4>
+          <div>
+            <ul class="list for__list wrapper">
+              <li>
+                <div>
+                  <img src="../images/lamp.svg" />
+                  <p>get ready-made services available on the platform</p>
+                </div>
+              </li>
+              <li>
+                <div>
+                  <img src="../images/bag.svg" />
+                  <p>launch courses and increase your trust in the IT market</p>
+                </div>
+              </li>
+              <li>
+                <div>
+                  <img src="../images/select.svg" />
+                  <p>
+                    have an advantage in hiring highly qualified citizen
+                    developers
+                  </p>
+                </div>
+              </li>
+            </ul>
+            <button class="button">become a contributor</button>
+          </div>
+        </div>
+      </section>
+      <section class="section container alreadyContributors">
+        <div class="container">
+          <h2>
+            Companies that <span class="span_title">have already</span><br />
+            <span class="span_title">become</span> contributors
+          </h2>
+          <div>
+            <ul class="list wrapper">
+              <li>
+                <div></div>
+                <img src="" alt="" />
+                <h4>
+                  We provide integration between users, customers, systems to
+                  ensure the growth of our customers’ business
+                </h4>
+                <p>
+                  The company is dedicated to increasing the sales and value of
+                  companies through bespoke solutions and effective integrations
+                </p>
+                <ul>
+                  <li>Banking</li>
+                  <li>CRM</li>
+                  <li>E-commerce</li>
+                  <li>Nelecommunications</li>
+                </ul>
+              </li>
+              <li>
+                <div></div>
+                <img src="" alt="" />
+                <h4>Single low-code platform to power your innovation</h4>
+                <p>
+                  Platform aims to empower anyone to build applications by
+                  hiding the complexity of the software development lifecycle
+                </p>
+                <ul>
+                  <li>UI editing</li>
+                  <li>Flow editing</li>
+                  <li>DataBase Management</li>
+                  <li>Layout Management</li>
+                </ul>
+              </li>
+              <li>
+                <div></div>
+                <img src="" alt="" />
+                <h4>
+                  Ukrainian DevOps Society (International) or International
+                  DevOps Society (Ukrainian)
+                </h4>
+                <p>
+                  DevOps Community where anyone can find answer, work or extend
+                  team easily
+                </p>
+                <ul>
+                  <li>Friendly community</li>
+                  <li>IT info source</li>
+                  <li>Top enginers</li>
+                  <li>Main forum for discussions</li>
+                </ul>
+              </li>
+              <li>
+                <div></div>
+                <img src="" alt="" />
+                <h4>The No-Code Business Operating System</h4>
+                <p>
+                  The evolution of business management: one smooth ecosystem and
+                  the freedom of “сoding” with business terms, no IT developers
+                  required
+                </p>
+                <ul>
+                  <li>Speed up business process x10</li>
+                  <li>Optimize IT/development staff costs by 50%-90%</li>
+                  <li>Simulate the results of business process changes</li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="section container becomeCDEV">
+        <div class="container-dark container">
+          <h2>
+            How to become
+            <span class="span_title"
+              >a citizen <br />
+              developer?</span
+            >
+          </h2>
+          <p>
+            Citizen Developer - a specialist who creates IT solutions without an
+            IT/engineering education. Such specialists are switchers who were
+            able to master No-Code and become part of the IT sector.
+          </p>
+          <h4>
+            Leave a request below and join the first
+            <span class="span_title">Ukrainian No-Code</span>
+            community!
+          </h4>
+          <h4>
+            By joining as
+            <span class="span_title">a Citizen Developer</span> you:
+          </h4>
+          <div>
+            <ul class="list">
+              <li>
+                <img src="" alt="" />
+                <p>
+                  receive training and discounts on events in the FlowMates
+                  community
+                </p>
+              </li>
+              <li>
+                <img src="" alt="" />
+                <p>
+                  you will have a strong community in which hundreds of other
+                  specialists are striving for professional self-development
+                </p>
+              </li>
+              <li>
+                <img src="" alt="" />
+                <p>
+                  get exclusive access to vacancies from companies contributing
+                  to the community
+                </p>
+              </li>
+            </ul>
+            <button type="button" class="button">
+              become a citizen developer
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="footer__wrapper">
+        <div class="footer__adress-wrapper">
+          <div class="footer__logo">
+            <a href="#">
+              <img src="../images/logofooter.png" alt="Flowmates" />
+            </a>
+          </div>
+
+          <ul class="list footer__adress footer-text">
+            <li>
+              <a href="tel:380961256201">+38 096 125 62 01</a>
+            </li>
+            <li>
+              <a href="mailto:c.miliutenko@flowmates.org"
+                >c.miliutenko@flowmates.org</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="footer__nav-wrapper">
+          <nav class="footer__nav">
+            <ul class="list footer__nav footer-text">
+              <li>
+                <a href="#">About FlowMates </a>
+              </li>
+              <li><a href="#"> Become a contributor</a></li>
+              <li>
+                <a href="#">About conference</a>
+              </li>
+              <li><a href="#">Become a citizen developer</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer__cocial-wrapper">
+          <h4>Follow</h4>
+          <ul class="list footer__cocial-list">
+            <li>
+              <a class="cocial-link" href="#"
+                ><img src="../images/linkedin.svg" alt="linkedin"
+              /></a>
+            </li>
+            <li>
+              <a class="cocial-link" href="#"
+                ><img src="../images/youtube.svg" alt="youtube"
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <script src="./menu.js"></script>
     <script src="./index.js"></script>
   </body>
