--- a/src/index.html
+++ b/src/index.html
@@ -104,17 +104,19 @@
           <div class="whoIs__ImgWrapper">
             <img src="../images/desktop/conectDesktop.jpg" alt="conect" />
           </div>
-          <div class="wrapper__text">
+          <div class="wrapper__text text-smoll">
             <h2>What is <span class="span_title">FlowMates?</span></h2>
-            <p>
-              <span>Flowmates</span> -is a global community of friendly and
-              collaborative people with one common goal - developing open-source
-              technologies.
-              <br />
-              Our <span> core </span>mission is to create the best conditions
-              for business digitalization with the help of open source low-code
-              platform and training of citizen developers.
-            </p>
+            <span
+              ><span class="bold">Flowmates</span> -is a global community of
+              friendly and collaborative people with one common goal -
+              developing open-source technologies.</span
+            >
+
+            <span>
+              Our <span class="bold"> core mission</span> is to create the best
+              conditions for business digitalization with the help of open
+              source low-code platform and training of citizen developers.</span
+            >
           </div>
         </div>
       </section>
@@ -122,22 +124,25 @@
         <div class="container section">
           <h2><span class="span_title">What is</span> the conference about?</h2>
           <div class="conference__wrapper wrapper">
-            <div class="wrapper__text">
-              <p>
-                <span>Flowmates</span> invite all tech specialists, geeks
-                no/low-code evangelists, IT communities, investors, or
-                investment funds to take part in the forthcoming event.
-                Dedicated to the battle of approaches to the implementation of
-                projects using No-Code, the event will be useful for both
-                investors and IT innovators interested in taking the maximum
-                advantages out of the IT revolution.
-                <br />
-                Ukraine bank representatives and
-                <span>No-Code </span> communities will be presented at the
-                conference where the professional speakers will discuss No-Code
-                solutions for business, successful cases, and fuckups.
-              </p>
-              <h3>Ticket price: $$$</h3>
+            <div class="wrapper__text text-smoll">
+              <span
+                ><span class="bold">Flowmates</span> invite all tech
+                specialists, geeks no/low-code evangelists, IT communities,
+                investors, or investment funds to take part in the forthcoming
+                event. Dedicated to the battle of approaches to the
+                implementation of projects using No-Code, the event will be
+                useful for both investors and IT innovators interested in taking
+                the maximum advantages out of the IT revolution.
+              </span>
+              <span
+                >Ukraine bank representatives and
+                <span class="bold">No-Code </span> communities will be presented
+                at the conference where the professional speakers will discuss
+                No-Code solutions for business, successful cases, and
+                fuckups.</span
+              >
+
+              <h5>Ticket price: $$$</h5>
               <button class="button">Register</button>
             </div>
 
@@ -205,7 +210,7 @@
           </ul>
         </div>
       </section>
-      <section class="section container guest">
+      <section class="section guest">
         <div class="whoIs__wrapper wrapper container">
           <div class="whoIs__ImgWrapper guest-back">
             <img src="../images/desktop/guestdesk.png" alt="conect" />
@@ -213,20 +218,33 @@
           </div>
           <div>
             <h2>Invited <span class="span_title">guest</span></h2>
-            <p class="wrapper__text-guest">
-              Senior bank manager with 30 years of experience in project
-              management, business development and design of new digital product
-              solutions. <br />
-              Managed digital transformation in banks: Montepio Geral,
-              Argentaria and BBVA in Portugal and Spain 7 years of international
-              experience, constantly innovating and focusing primarily on
-              solutions with real impact on companies profits. <br />
-              Vitor focuses on long-term results and solving strategic problems.
-            </p>
+            <div class="wrapper__text-guest text-smoll">
+              <span>
+                Senior bank manager with
+                <span class="bold">30 years of experience</span> in project
+                management, business development and design of new digital
+                product solutions.</span
+              >
+
+              <span
+                >Managed
+                <span class="bold">digital transformation in banks</span>:
+                Montepio Geral, Argentaria and BBVA in Portugal and Spain 7
+                years of international experience, constantly innovating and
+                focusing primarily on solutions with real impact on companies
+                profits.</span
+              >
+
+              <span>
+                Vitor focuses on
+                <span class="bold">long-term</span> results and
+                <span class="bold">solving strategic problems</span>.</span
+              >
+            </div>
           </div>
         </div>
       </section>
-      <section class="section container form">
+      <section class="section container form center-text">
         <div class="form__wrapper container-dark container">
           <form>
             <h2>
@@ -272,42 +290,50 @@
         </div>
       </section>
       <section class="section container contributorCompany">
-        <div class="container">
+        <div class="container center-text gap">
           <h2>
             How to become <br /><span class="span_title">a contributor</span>
             company?
           </h2>
-          <p>
-            Contributors are companies that are members of the FlowMates
-            community and enjoy the benefits of being part of the community.
+          <p class="text-smoll">
+            <span class="bold">Contributors </span> are companies that are
+            members of the FlowMates community and <br />
+            enjoy the benefits of being part of the community.
           </p>
-          <h4>
+          <h3>
              Leave a request below and join the first
             <span class="span_title">Ukrainian No-Code</span> community!
-          </h4>
-          <h4>
+          </h3>
+          <h3>
             Collaborating <span class="span_title">with us</span> , you will:
-          </h4>
+          </h3>
           <div>
             <ul class="list for__list wrapper">
               <li>
                 <div>
                   <img src="../images/lamp.svg" />
-                  <p>get ready-made services available on the platform</p>
+                  <p class="text-smoll">
+                    get ready-made services <br />
+                    available on the platform
+                  </p>
                 </div>
               </li>
               <li>
                 <div>
                   <img src="../images/bag.svg" />
-                  <p>launch courses and increase your trust in the IT market</p>
+                  <p class="text-smoll">
+                    launch courses and increase your <br />
+                    trust in the IT market
+                  </p>
                 </div>
               </li>
               <li>
                 <div>
                   <img src="../images/select.svg" />
-                  <p>
-                    have an advantage in hiring highly qualified citizen
-                    developers
+                  <p class="text-smoll">
+                    have an advantage in <br />
+                    hiring highly qualified <br />
+                    citizen developers
                   </p>
                 </div>
               </li>
@@ -316,86 +342,122 @@
           </div>
         </div>
       </section>
-      <section class="section container alreadyContributors">
+      <section class="section alreadyContributors">
         <div class="container">
           <h2>
             Companies that <span class="span_title">have already</span><br />
             <span class="span_title">become</span> contributors
           </h2>
           <div>
-            <ul class="list wrapper">
-              <li>
-                <div></div>
-                <img src="" alt="" />
-                <h4>
-                  We provide integration between users, customers, systems to
-                  ensure the growth of our customers’ business
-                </h4>
-                <p>
-                  The company is dedicated to increasing the sales and value of
-                  companies through bespoke solutions and effective integrations
-                </p>
-                <ul>
-                  <li>Banking</li>
-                  <li>CRM</li>
-                  <li>E-commerce</li>
-                  <li>Nelecommunications</li>
-                </ul>
+            <ul class="list alreadyContributors__list">
+              <li class="alreadyContributors__list-item">
+                <div>
+                  <img
+                    src="../images/flowstech.png"
+                    alt="flowstech"
+                    width="240"
+                    height="39"
+                  />
+                  <h4>
+                    We provide integration between
+                    <span class="span_title"
+                      >users, customers, systems to ensure the growth of our
+                      customers business</span
+                    >
+                  </h4>
+                  <p class="text-smoll left">
+                    The company is dedicated to increasing the sales and value
+                    of companies through bespoke solutions and effective
+                    integrations
+                  </p>
+                  <ul class="alreadyContributors__listtwo text-smoll">
+                    <li>Banking</li>
+                    <li>CRM</li>
+                    <li>E-commerce</li>
+                    <li>Nelecommunications</li>
+                  </ul>
+                </div>
               </li>
-              <li>
-                <div></div>
-                <img src="" alt="" />
-                <h4>Single low-code platform to power your innovation</h4>
-                <p>
-                  Platform aims to empower anyone to build applications by
-                  hiding the complexity of the software development lifecycle
-                </p>
-                <ul>
-                  <li>UI editing</li>
-                  <li>Flow editing</li>
-                  <li>DataBase Management</li>
-                  <li>Layout Management</li>
-                </ul>
+              <li class="alreadyContributors__list-item">
+                <div>
+                  <img
+                    src="../images/ubos.png"
+                    alt="ubos"
+                    width="125"
+                    height="39"
+                  />
+                  <h4>
+                    Single low-code platform
+                    <span class="span_title"> to power your innovation</span>
+                  </h4>
+                  <p class="text-smoll">
+                    Platform aims to empower anyone to build applications by
+                    hiding the complexity of the software development lifecycle
+                  </p>
+                  <ul class="alreadyContributors__listtwo text-smoll">
+                    <li>UI editing</li>
+                    <li>Flow editing</li>
+                    <li>DataBase Management</li>
+                    <li>Layout Management</li>
+                  </ul>
+                </div>
               </li>
-              <li>
-                <div></div>
-                <img src="" alt="" />
-                <h4>
-                  Ukrainian DevOps Society (International) or International
-                  DevOps Society (Ukrainian)
-                </h4>
-                <p>
-                  DevOps Community where anyone can find answer, work or extend
-                  team easily
-                </p>
-                <ul>
-                  <li>Friendly community</li>
-                  <li>IT info source</li>
-                  <li>Top enginers</li>
-                  <li>Main forum for discussions</li>
-                </ul>
+              <li class="alreadyContributors__list-item">
+                <div>
+                  <img
+                    src="../images/ukrops.png"
+                    alt="ukrops"
+                    width="125"
+                    height="39"
+                  />
+                  <h4>
+                    <span class="span_title"
+                      >Ukrainian DevOps Society (International)
+                    </span>
+                    or International DevOps Society (Ukrainian)
+                  </h4>
+                  <p class="text-smoll">
+                    DevOps Community where anyone can find answer, work or
+                    extend team easily
+                  </p>
+                  <ul class="alreadyContributors__listtwo text-smoll">
+                    <li>Friendly community</li>
+                    <li>IT info source</li>
+                    <li>Top enginers</li>
+                    <li>Main forum for discussions</li>
+                  </ul>
+                </div>
               </li>
-              <li>
-                <div></div>
-                <img src="" alt="" />
-                <h4>The No-Code Business Operating System</h4>
-                <p>
-                  The evolution of business management: one smooth ecosystem and
-                  the freedom of “сoding” with business terms, no IT developers
-                  required
-                </p>
-                <ul>
-                  <li>Speed up business process x10</li>
-                  <li>Optimize IT/development staff costs by 50%-90%</li>
-                  <li>Simulate the results of business process changes</li>
-                </ul>
+              <li class="alreadyContributors__list-item">
+                <div>
+                  <img
+                    src="../images/qoteq.png"
+                    alt="qoteq"
+                    width="135"
+                    height="39"
+                  />
+                  <h4>
+                    The <span class="span_title">No-Code Business</span>
+                    Operating System
+                  </h4>
+                  <p class="text-smoll">
+                    The evolution of business management: one smooth ecosystem
+                    and the freedom of “сoding” with business terms, no IT
+                    developers required
+                  </p>
+                  <ul class="alreadyContributors__listtwo text-smoll">
+                    <li>Speed up business process x10</li>
+                    <li>Optimize IT/development staff costs by 50%-90%</li>
+                    <li>Simulate the results of business process changes</li>
+                  </ul>
+                </div>
               </li>
             </ul>
           </div>
         </div>
       </section>
       <section class="section container becomeCDEV">
-        <div class="container-dark container">
+        <div class="becomeCDEV__wrapper container-dark container center-text">
           <h2>
             How to become
             <span class="span_title"
@@ -403,10 +465,11 @@
               developer?</span
             >
           </h2>
-          <p>
-            Citizen Developer - a specialist who creates IT solutions without an
-            IT/engineering education. Such specialists are switchers who were
-            able to master No-Code and become part of the IT sector.
+          <p class="becomeCDEV__subtitle">
+            <span class="bold">Citizen Developer</span>
+            - a specialist who creates IT solutions without an IT/engineering
+            education. Such specialists are switchers who were able to master
+            No-Code and become part of the IT sector.
           </p>
           <h4>
             Leave a request below and join the first
@@ -418,23 +481,23 @@
             <span class="span_title">a Citizen Developer</span> you:
           </h4>
           <div>
-            <ul class="list">
+            <ul class="becomeCDEV__list list">
               <li>
-                <img src="" alt="" />
+                <img src="../images/man.svg" alt="" />
                 <p>
                   receive training and discounts on events in the FlowMates
                   community
                 </p>
               </li>
               <li>
-                <img src="" alt="" />
+                <img src="../images/flowrs.svg" alt="" />
                 <p>
                   you will have a strong community in which hundreds of other
                   specialists are striving for professional self-development
                 </p>
               </li>
               <li>
-                <img src="" alt="" />
+                <img src="../images/groupman.svg" alt="" />
                 <p>
                   get exclusive access to vacancies from companies contributing
                   to the community
