--- a/src/index.html
+++ b/src/index.html
@@ -101,9 +101,8 @@
       </section>
       <section class="section container whoIs">
         <div class="whoIs__wrapper wrapper">
-          <div class="whoIs__ImgWrapper">
-            <img src="../images/desktop/conectDesktop.jpg" alt="conect" />
-          </div>
+          <img src="../images/desktop/conectDesktop.jpg" alt="conect" />
+
           <div class="wrapper__text text-smoll">
             <h2>What is <span class="span_title">FlowMates?</span></h2>
             <span
@@ -148,7 +147,6 @@
 
             <div class="conference__Iframewrapper">
               <iframe
-                width="520"
                 height="315"
                 src="https://www.youtube.com/embed/VIDEO_ID"
                 frameborder="0"
@@ -480,7 +478,7 @@
             By joining as
             <span class="span_title">a Citizen Developer</span> you:
           </h4>
-          <div>
+          <div class="becomeCDEV__list-wrapper">
             <ul class="becomeCDEV__list list">
               <li>
                 <img src="../images/man.svg" alt="" />
@@ -504,10 +502,10 @@
                 </p>
               </li>
             </ul>
-            <button type="button" class="button">
-              become a citizen developer
-            </button>
           </div>
+          <button type="button" class="button">
+            become a citizen developer
+          </button>
         </div>
       </section>
     </main>
