--- a/src/index.html
+++ b/src/index.html
@@ -347,8 +347,8 @@
             <span class="span_title">become</span> contributors
           </h2>
           <div>
-            <ul class="list alreadyContributors__list">
-              <li class="alreadyContributors__list-item">
+            <ul class="list alreadyContributors__list slider">
+              <li class="alreadyContributors__list-item slide">
                 <div>
                   <img
                     src="../images/flowstech.png"
@@ -376,13 +376,13 @@
                   </ul>
                 </div>
               </li>
-              <li class="alreadyContributors__list-item">
+              <li class="alreadyContributors__list-item slide">
                 <div>
                   <img
                     src="../images/ubos.png"
                     alt="ubos"
-                    width="125"
-                    height="39"
+                    width="122"
+                    height="38"
                   />
                   <h4>
                     Single low-code platform
@@ -400,7 +400,7 @@
                   </ul>
                 </div>
               </li>
-              <li class="alreadyContributors__list-item">
+              <li class="alreadyContributors__list-item slide">
                 <div>
                   <img
                     src="../images/ukrops.png"
@@ -426,7 +426,7 @@
                   </ul>
                 </div>
               </li>
-              <li class="alreadyContributors__list-item">
+              <li class="alreadyContributors__list-item slide">
                 <div>
                   <img
                     src="../images/qoteq.png"
@@ -561,6 +561,7 @@
       </div>
     </footer>
     <script src="./menu.js"></script>
+    <script src="./slider.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
