--- a/src/index.html
+++ b/src/index.html
@@ -244,7 +244,7 @@
       </section>
       <section class="section container form center-text">
         <div class="form__wrapper container-dark container">
-          <form>
+          <form class="form__wrapper">
             <h2>
               <span class="span_title">Register now,</span> number of <br />
               tickets is limited!
@@ -503,7 +503,7 @@
               </li>
             </ul>
           </div>
-          <button type="button" class="button">
+          <button type="button" class="button" data-modal-open>
             become a citizen developer
           </button>
         </div>
@@ -560,8 +560,49 @@
         </div>
       </div>
     </footer>
+    <!-- modal-window -->
+
+    <!-- HTML -->
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal form center-text">
+        <span class="close" data-modal-close>&times;</span>
+        <h2><span class="span_title">Become </span> a contributor</h2>
+        <form class="form__wrapper">
+          <div>
+            <div>
+              <label for="first-name">First Name:</label>
+              <input type="text" id="first-name" name="first-name" />
+
+              <label for="second-name">Second Name:</label>
+              <input type="text" id="second-name" name="second-name" />
+
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email" />
+            </div>
+
+            <div>
+              <label for="phone">Phone Number:</label>
+              <input type="tel" id="phone" name="phone" />
+
+              <label for="phone">Phone Number:</label>
+              <input type="tel" id="phone" name="phone" />
+
+              <label for="phone">Phone Number:</label>
+              <input type="tel" id="phone" name="phone" />
+            </div>
+          </div>
+
+          <button type="submit" id="join-online" class="button">
+            Join Online
+          </button>
+        </form>
+      </div>
+    </div>
+
     <script src="./menu.js"></script>
     <script src="./slider.js"></script>
     <script src="./index.js"></script>
+    <script src="./modal.js"></script>
   </body>
 </html>
