added new page "thanks"

--- a/src/index.html
+++ b/src/index.html
@@ -25,38 +25,40 @@
   </head>
 
   <body>
-    <header class="header container">
-      <div class="header__logo">
-        <a href="#">
-          <img src="../images/logo.png" alt="Flowmates" />
-        </a>
-      </div>
-      <nav>
-        <ul class="header__menu list">
-          <li><a href="#">About FlowMates</a></li>
-          <li><a href="#">About conference</a></li>
-          <li><a href="#">Become a contributor</a></li>
-          <li><a href="#">Become a citizen developer</a></li>
-        </ul>
-      </nav>
-      <button class="button button-secondary">Register</button>
-      <button
-        type="button"
-        data-menu-open
-        class="header__burger-icon menu-icon"
-        aria-expanded="false"
-      >
-        &#9776;
-      </button>
-      <!-- <div class="header__burger-icon menu-icon">&#9776;</div> -->
-      <div data-menu class="header__burger-menu">
-        <button class="is-close" type="button" data-menu-close>&#215;</button>
-        <ul>
-          <li><a href="#">About FlowMates</a></li>
-          <li><a href="#">About conference</a></li>
-          <li><a href="#">Become a contributor</a></li>
-          <li><a href="#">Become a citizen developer</a></li>
-        </ul>
+    <header class="header_wrapper">
+      <div class="container header">
+        <div class="header__logo">
+          <a href="#">
+            <img src="../images/logo.png" alt="Flowmates" />
+          </a>
+        </div>
+        <nav>
+          <ul class="header__menu list">
+            <li><a href="#">About FlowMates</a></li>
+            <li><a href="#">About conference</a></li>
+            <li><a href="#">Become a contributor</a></li>
+            <li><a href="#">Become a citizen developer</a></li>
+          </ul>
+        </nav>
+        <button class="button button-secondary">Register</button>
+        <button
+          type="button"
+          data-menu-open
+          class="header__burger-icon menu-icon"
+          aria-expanded="false"
+        >
+          &#9776;
+        </button>
+        <!-- <div class="header__burger-icon menu-icon">&#9776;</div> -->
+        <div data-menu class="header__burger-menu">
+          <button class="is-close" type="button" data-menu-close>&#215;</button>
+          <ul>
+            <li><a href="#">About FlowMates</a></li>
+            <li><a href="#">About conference</a></li>
+            <li><a href="#">Become a contributor</a></li>
+            <li><a href="#">Become a citizen developer</a></li>
+          </ul>
+        </div>
       </div>
     </header>
 
