--- a/src/thanks.html
+++ b/src/thanks.html
@@ -24,40 +24,56 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header class="header_wrapper">
-      <div class="container header">
-        <div class="header__logo">
-          <a href="#">
-            <img src="../images/logo.png" alt="Flowmates" />
-          </a>
+    <header class="header container">
+      <div class="header__logo">
+        <a href="#">
+          <img src="../images/logo.png" alt="Flowmates" />
+        </a>
+      </div>
+      <nav>
+        <ul class="header__menu list">
+          <li><a href="#">About FlowMates</a></li>
+          <li><a href="#">About conference</a></li>
+          <li><a href="#">Become a contributor</a></li>
+          <li><a href="#">Become a citizen developer</a></li>
+        </ul>
+      </nav>
+      <button class="button button-secondary">Register</button>
+      <button
+        type="button"
+        data-menu-open
+        class="header__burger-icon menu-icon"
+        aria-expanded="false"
+      >
+        &#9776;
+      </button>
+      <!-- <div class="header__burger-icon menu-icon">&#9776;</div> -->
+      <div data-menu class="header__burger-menu">
+        <div class="modal__header-wrap">
+          <div class="header__logo">
+            <a href="#">
+              <img src="../images/logo.png" alt="Flowmates" />
+            </a>
+          </div>
+          <button class="is-close" type="button" data-menu-close>
+            <img src="../images/Vector.svg" />
+          </button>
         </div>
-        <nav>
-          <ul class="header__menu list">
-            <li><a href="#">About FlowMates</a></li>
-            <li><a href="#">About conference</a></li>
-            <li><a href="#">Become a contributor</a></li>
-            <li><a href="#">Become a citizen developer</a></li>
-          </ul>
-        </nav>
-        <button class="button button-secondary">Register</button>
-        <button
-          type="button"
-          data-menu-open
-          class="header__burger-icon menu-icon"
-          aria-expanded="false"
-        >
-          &#9776;
-        </button>
-        <!-- <div class="header__burger-icon menu-icon">&#9776;</div> -->
-        <div data-menu class="header__burger-menu">
-          <button class="is-close" type="button" data-menu-close>&#215;</button>
-          <ul>
-            <li><a href="#">About FlowMates</a></li>
-            <li><a href="#">About conference</a></li>
-            <li><a href="#">Become a contributor</a></li>
-            <li><a href="#">Become a citizen developer</a></li>
-          </ul>
-        </div>
+        <ul class="modal__menu-list">
+          <li><a class="modal__menu-list-item" href="#">About FlowMates</a></li>
+          <li>
+            <a class="modal__menu-list-item" href="#">About conference</a>
+          </li>
+          <li>
+            <a class="modal__menu-list-item" href="#">Become a contributor</a>
+          </li>
+          <li>
+            <a class="modal__menu-list-item" href="#"
+              >Become a citizen developer</a
+            >
+          </li>
+        </ul>
+        <button class="button__modal">Register</button>
       </div>
     </header>
     <main>
@@ -124,5 +140,6 @@
         </div>
       </div>
     </footer>
+    <script src="./menu.js"></script>
   </body>
 </html>
