--- a/src/index.html
+++ b/src/index.html
@@ -249,7 +249,7 @@
                 name="email" /><br />
             </label>
             <label class="form__label" for="phone">Phone Number:
-              <input placeholder="0123456789" id="phone" type="tel">
+              <input class="phone__input" placeholder="0123456789" id="phone" type="tel">
             </label>
 
             <!-- <label>Are you a:</label><br /> -->
@@ -534,7 +534,7 @@
               name="email" /><br />
           </label>
           <label class="form__label" for="phone">Phone Number
-            <input placeholder="0123456789" id="phone" type="tel">
+            <input class="phone__input" placeholder="0123456789" id="phone" type="tel">
           </label>
 
           <label class="form__label" for="company">The company name
@@ -573,7 +573,7 @@
               name="email" /><br />
           </label>
           <label class="form__label" for="phone">Phone Number
-            <input placeholder="0123456789" id="phone" type="tel">
+            <input  class="phone__input" placeholder="0123456789" id="phone" type="tel">
           </label>
 
           <label class="form__label" for="company">The company name
