--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,6 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <link rel="stylesheet" href="./style.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
 
   <body>
@@ -40,7 +39,7 @@
           <li><a href="#BecomeCD">Become a citizen developer</a></li>
         </ul>
       </nav>
-      <button class="button button-secondary">Register</button>
+      <button class="button button-secondary" href="register">Register</button>
       <button
         type="button"
         data-menu-open
@@ -92,7 +91,7 @@
             >
           </li>
         </ul>
-        <button class="button__modal">Register</button>
+        <a class="button__modal" href="#register1">Register</a>
       </div>
     </header>
 
@@ -116,7 +115,7 @@
               <span class="colorful-text">???</span> places left
             </p>
           </div>
-          <button class="button">Register</button>
+          <button class="button" href="#register1">Register</button>
         </div>
         <div class="banner__image-info">
           <div class="banner__image">
@@ -178,7 +177,7 @@
               >
 
               <h5>Ticket price: $$$</h5>
-              <button class="button">Register</button>
+              <button class="button" href="#register1">Register</button>
             </div>
 
             <div class="conference__Iframewrapper">
@@ -279,7 +278,7 @@
         </div>
       </section>
       <section class="section container form center-text">
-        <div class="form__wrapper container-dark container">
+        <div class="form__wrapper container-dark container" id="register1">
           <form id="form-register">
             <h2>
               <span class="span_title">Register now,</span> number of <br />
