--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
           <li><a href="#BecomeCD">Become a citizen developer</a></li>
         </ul>
       </nav>
-      <button class="button button-secondary" href="register">Register</button>
+      <a class="button button-secondary link-btn" href="register">Register</a>
       <button
         type="button"
         data-menu-open
@@ -91,7 +91,12 @@
             >
           </li>
         </ul>
-        <a class="button__modal" href="#register1">Register</a>
+        <a
+          class="button__modal link-btn button"
+          href="#register1"
+          data-menu-item
+          >Register</a
+        >
       </div>
     </header>
 
@@ -115,7 +120,7 @@
               <span class="colorful-text">???</span> places left
             </p>
           </div>
-          <button class="button" href="#register1">Register</button>
+          <a class="button link-btn" href="#register1">Register</a>
         </div>
         <div class="banner__image-info">
           <div class="banner__image">
