--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./src/style.css" />
   </head>
 
   <body>
@@ -39,7 +39,7 @@
           <li><a href="#BecomeCD">Become a citizen developer</a></li>
         </ul>
       </nav>
-      <a class="button button-secondary link-btn" href="register">Register</a>
+      <a class="button button-secondary color_btn link-btn" href="#register1">Register</a>
       <button
         type="button"
         data-menu-open
@@ -92,7 +92,7 @@
           </li>
         </ul>
         <a
-          class="button__modal link-btn button"
+          class="button__modal link-btn__header button"
           href="#register1"
           data-menu-item
           >Register</a
@@ -182,7 +182,7 @@
               >
 
               <h5>Ticket price: $$$</h5>
-              <button class="button" href="#register1">Register</button>
+              <a class="button button-secondary link-btn" href="#register1">Register</a>
             </div>
 
             <div class="conference__Iframewrapper">
@@ -797,12 +797,12 @@
       </div>
     </div>
 
-    <script src="./menu.js"></script>
-    <script src="./index.js"></script>
-    <script src="./slider.js"></script>
-    <script src="./formCitizenDev.js"></script>
-    <script src="./formContributor.js"></script>
-    <script src="./modal.js"></script>
-    <script src="./modaldev.js"></script>
+    <script src="./src/menu.js"></script>
+    <script src="./src/index.js"></script>
+    <script src="./src/slider.js"></script>
+    <script src="./src/formCitizenDev.js"></script>
+    <script src="./src/formContributor.js"></script>
+    <script src="./src/modal.js"></script>
+    <script src="./src/modaldev.js"></script>
   </body>
 </html>
