--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             <ul class="list for__list wrapper">
               <li>
                 <div>
-                  <img src="/images/lamp.svg" />
+                  <img src="images/lamp.svg" />
                   <p class="text-smoll">
                     get ready-made services <br />
                     available on the platform
@@ -404,7 +404,7 @@
               </li>
               <li>
                 <div>
-                  <img src="/images/bag.svg" />
+                  <img src="images/bag.svg" />
                   <p class="text-smoll">
                     launch courses and increase your <br />
                     trust in the IT market
@@ -413,7 +413,7 @@
               </li>
               <li>
                 <div>
-                  <img src="/images/select.svg" />
+                  <img src="images/select.svg" />
                   <p class="text-smoll">
                     have an advantage in <br />
                     hiring highly qualified <br />
@@ -437,7 +437,7 @@
               <li class="alreadyContributors__list-item slide">
                 <div>
                   <img
-                    src="/images/flowstech.png"
+                    src="images/flowstech.png"
                     alt="flowstech"
                     width="240"
                     height="39"
@@ -465,7 +465,7 @@
               <li class="alreadyContributors__list-item slide">
                 <div>
                   <img
-                    src="/images/ubos.png"
+                    src="images/ubos.png"
                     alt="ubos"
                     width="122"
                     height="38"
@@ -489,7 +489,7 @@
               <li class="alreadyContributors__list-item slide">
                 <div>
                   <img
-                    src="/images/ukrops.png"
+                    src="images/ukrops.png"
                     alt="ukrops"
                     width="125"
                     height="39"
@@ -515,7 +515,7 @@
               <li class="alreadyContributors__list-item slide">
                 <div>
                   <img
-                    src="/images/qoteq.png"
+                    src="images/qoteq.png"
                     alt="qoteq"
                     width="135"
                     height="39"
@@ -567,21 +567,21 @@
           <div class="becomeCDEV__list-wrapper">
             <ul class="becomeCDEV__list list">
               <li>
-                <img src="/images/man.svg" alt="" />
+                <img src="images/man.svg" alt="" />
                 <p>
                   receive training and discounts on events in the FlowMates
                   community
                 </p>
               </li>
               <li>
-                <img src="/images/flowrs.svg" alt="" />
+                <img src="images/flowrs.svg" alt="" />
                 <p>
                   you will have a strong community in which hundreds of other
                   specialists are striving for professional self-development
                 </p>
               </li>
               <li>
-                <img src="/images/groupman.svg" alt="" />
+                <img src="images/groupman.svg" alt="" />
                 <p>
                   get exclusive access to vacancies from companies contributing
                   to the community
@@ -600,7 +600,7 @@
         <div class="footer__adress-wrapper">
           <div class="footer__logo">
             <a href="#">
-              <img src="/images/logofooter.png" alt="Flowmates" />
+              <img src="images/logofooter.png" alt="Flowmates" />
             </a>
           </div>
 
@@ -634,12 +634,12 @@
           <ul class="list footer__cocial-list">
             <li>
               <a class="cocial-link" href="#"
-                ><img src="/images/linkedin.svg" alt="linkedin"
+                ><img src="images/linkedin.svg" alt="linkedin"
               /></a>
             </li>
             <li>
               <a class="cocial-link" href="#"
-                ><img src="/images/youtube.svg" alt="youtube"
+                ><img src="images/youtube.svg" alt="youtube"
               /></a>
             </li>
           </ul>
