--- a/src/thanks.html
+++ b/src/thanks.html
@@ -32,10 +32,10 @@
       </div>
       <nav>
         <ul class="header__menu list">
-          <li><a href="#">About FlowMates</a></li>
-          <li><a href="#">About conference</a></li>
-          <li><a href="#">Become a contributor</a></li>
-          <li><a href="#">Become a citizen developer</a></li>
+          <li><a href="#section-AboutFlowMates">About FlowMates</a></li>
+          <li><a href="#section-AboutConference">About conference</a></li>
+          <li><a href="#BecomeContributor">Become a contributor</a></li>
+          <li><a href="#BecomeCD">Become a citizen developer</a></li>
         </ul>
       </nav>
       <button class="button button-secondary">Register</button>
@@ -112,14 +112,10 @@
         <div class="footer__nav-wrapper">
           <nav class="footer__nav">
             <ul class="list footer__nav footer-text">
-              <li>
-                <a href="#">About FlowMates </a>
-              </li>
-              <li><a href="#"> Become a contributor</a></li>
-              <li>
-                <a href="#">About conference</a>
-              </li>
-              <li><a href="#">Become a citizen developer</a></li>
+              <li><a href="#section-AboutFlowMates">About FlowMates</a></li>
+              <li><a href="#section-AboutConference">About conference</a></li>
+              <li><a href="#BecomeContributor">Become a contributor</a></li>
+              <li><a href="">Become a citizen developer</a></li>
             </ul>
           </nav>
         </div>
