--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="header container">
       <div class="header__logo">
         <a href="#">
-          <img src="../images/logo.png" alt="Flowmates" />
+          <img src="images/logo.png" alt="Flowmates" />
         </a>
       </div>
       <nav>
@@ -53,11 +53,11 @@
         <div class="modal__header-wrap">
           <div class="header__logo">
             <a href="#">
-              <img src="../images/logo.png" alt="Flowmates" />
+              <img src="images/logo.png" alt="Flowmates" />
             </a>
           </div>
           <button class="is-close" type="button" data-menu-close>
-            <img src="../images/Vector.svg" />
+            <img src="images/Vector.svg" />
           </button>
         </div>
         <ul class="modal__menu-list">
@@ -124,7 +124,7 @@
         </div>
         <div class="banner__image-info">
           <div class="banner__image">
-            <img src="/images/groupdev.png" alt="Our teammates" />
+            <img src="images/groupdev.png" alt="Our teammates" />
           </div>
 
           <div class="banner__info">
@@ -141,7 +141,7 @@
       </section>
       <section class="section container whoIs" id="section-AboutFlowMates">
         <div class="whoIs__wrapper wrapper">
-          <img src="/images/desktop/conectDesktop.jpg" alt="conect" />
+          <img src="images/desktop/conectDesktop.jpg" alt="conect" />
 
           <div class="wrapper__text text-smoll">
             <h2>What is <span class="span_title">FlowMates?</span></h2>
@@ -203,7 +203,7 @@
           <ul class="for__list list">
             <li class="for__item">
               <div>
-                <img src="/images/GearSix.svg" />
+                <img src="images/GearSix.svg" />
                 <h3>For IT people</h3>
               </div>
 
@@ -214,7 +214,7 @@
             </li>
             <li class="for__item">
               <div>
-                <img src="/images/CurrencyCircleDollar.svg" />
+                <img src="images/CurrencyCircleDollar.svg" />
                 <h3>For investors</h3>
               </div>
 
@@ -225,7 +225,7 @@
             </li>
             <li class="for__item">
               <div>
-                <img src="/images/Briefcase.svg" />
+                <img src="images/Briefcase.svg" />
                 <h3>For business owners</h3>
               </div>
 
@@ -236,7 +236,7 @@
             </li>
             <li class="for__item">
               <div>
-                <img src="/images/FileCode.svg" />
+                <img src="images/FileCode.svg" />
                 <h3>Fintech people</h3>
               </div>
 
@@ -251,7 +251,7 @@
       <section class="section guest">
         <div class="whoIs__wrapper wrapper container">
           <div class="whoIs__ImgWrapper guest-back">
-            <img src="/images/desktop/guestdesk.png" alt="conect" />
+            <img src="images/desktop/guestdesk.png" alt="conect" />
             <h2>Vitor Cruz</h2>
           </div>
           <div>
@@ -618,14 +618,10 @@
         <div class="footer__nav-wrapper">
           <nav class="footer__nav">
             <ul class="list footer__nav footer-text">
-              <li>
-                <a href="#">About FlowMates </a>
-              </li>
-              <li><a href="#"> Become a contributor</a></li>
-              <li>
-                <a href="#">About conference</a>
-              </li>
-              <li><a href="#">Become a citizen developer</a></li>
+                        <li><a href="#section-AboutFlowMates">About FlowMates</a></li>
+          <li><a href="#section-AboutConference">About conference</a></li>
+          <li><a href="#BecomeContributor">Become a contributor</a></li>
+          <li><a href="#BecomeCD">Become a citizen developer</a></li>
             </ul>
           </nav>
         </div>
