--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
           <li><a href="#BecomeCD">Become a citizen developer</a></li>
         </ul>
       </nav>
-      <a class="button button-secondary color_btn link-btn" href="#register1">Register</a>
+      <a class="button button-secondary color_btn link-btn" href="#register1"
+        >Register</a
+      >
       <button
         type="button"
         data-menu-open
@@ -101,7 +103,7 @@
     </header>
 
     <main>
-      <section class="section container container-dark banner">
+      <section class="section container-dark banner">
         <div class="banner__text">
           <h1 class="banner__text-title">
             In <span class="colorful-text">No-Code</span> <br />We trust
@@ -182,7 +184,9 @@
               >
 
               <h5>Ticket price: $$$</h5>
-              <a class="button button-secondary link-btn" href="#register1">Register</a>
+              <a class="button button-secondary link-btn" href="#register1"
+                >Register</a
+              >
             </div>
 
             <div class="conference__Iframewrapper">
@@ -618,10 +622,10 @@
         <div class="footer__nav-wrapper">
           <nav class="footer__nav">
             <ul class="list footer__nav footer-text">
-                        <li><a href="#section-AboutFlowMates">About FlowMates</a></li>
-          <li><a href="#section-AboutConference">About conference</a></li>
-          <li><a href="#BecomeContributor">Become a contributor</a></li>
-          <li><a href="#BecomeCD">Become a citizen developer</a></li>
+              <li><a href="#section-AboutFlowMates">About FlowMates</a></li>
+              <li><a href="#section-AboutConference">About conference</a></li>
+              <li><a href="#BecomeContributor">Become a contributor</a></li>
+              <li><a href="#BecomeCD">Become a citizen developer</a></li>
             </ul>
           </nav>
         </div>
